<resources>
    <string name="app_name">E-Books</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login -->
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="new_user">New User?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="repeat_password">Repeat Password</string>

    <!-- Error messages-->
    <string name="empty_email">Email is required</string>
    <string name="empty_password">Password is required</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="not_match">Passwords does not match!</string>
    <string name="failed_register">Authentication failed</string>
    <string name="failed_login">Username or password is not correct</string>
    <string name="invalid_password">Password must be minimum 6 symbols!</string>
    <string name="updated_password">Password updated successfully</string>
    <string name="current_pass_error">Current password is not correct</string>
    <string name="incorrect_password">Incorrect password</string>

    <!-- Nav -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>

    <!-- Main page -->
    <string name="see_more">See More</string>
    <string name="_see_more">ნახეთ ყველა</string>

    <!-- Details -->
    <string name="book_title">Title:</string>
    <string name="_book_title">სათაური:</string>
    <string name="author">Author:</string>
    <string name="_author">ავტორი:</string>
    <string name="page_numbers">Page Numbers:</string>
    <string name="_page_numbers">გვერდები:</string>

    <!-- Button Title -->
    <string name="read_now">Read Now</string>
    <string name="_read_now">წაკითხვა</string>

    <!-- Not Found -->
    <string name="sorry">I\'m Sorry,</string>
    <string name="_sorry">ვწუხვარ,</string>
    <string name="not_found">Your List is Empty</string>
    <string name="_not_found">თქვენი სია ცარიელია</string>
    <string name="_no_books_found">ჩანაწერი არ მოიძებნა</string>

    <!-- Fragment Titles -->
    <string name="_favorites">რჩეული წიგნები</string>
    <string name="_search">ძებნა</string>

    <!-- Hints -->
    <string name="search_books">Enter title or author</string>
    <string name="_search_books">ჩაწერეთ სათაური ან ავტორი</string>
    <string name="something_wrong">Something Wrong</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="_profile">პროფილი</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>

    <!-- Preferences-->
    <string name="pf_dark_dialog">Set App Theme</string>
    <string name="pf_light_title">Light Theme</string>
    <string name="pf_key_light">light</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="dark_mode">Dark Mode</string>


</resources>