<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/blur" />

                <TextView
                    android:id="@+id/book_details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="Description" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:id="@+id/book_details_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/sl" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_details_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="Name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_author"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/book_details_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_page_numbers"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/book_details_page_numbers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/read_button"
                            android:layout_width="120dp"
                            android:layout_height="50dp"
                            android:background="@drawable/read_button"
                            android:text="@string/_read_now"
                            android:theme="@style/formButton" />

                        <ImageView
                            android:id="@+id/add_button"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            android:visibility="visible"
                            app:tint="@color/icon_color" />

                        <ImageView
                            android:id="@+id/remove_button"
                            android:layout_width="60dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_baseline_favorite_24_black"
                            android:visibility="gone"
                            app:tint="@color/icon_color" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>